k8s/service.yaml
apiVersion: v1
kind: Service
meta
  name: nproject-app-svc
spec:
  type: LoadBalancer
  selector:
    app: nproject-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
