k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nproject-ingress
  namespace: default
  annotations:
    yandex.cloud/lets-encrypt: "true"
spec:
  tls:
    - hosts:
        - nproject.site
        - www.nproject.site
      secretName: nproject-tls
  rules:
    - host: nproject.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nproject-app-svc
                port:
                  number: 80
    - host: www.nproject.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nproject-app-svc
                port:
                  number: 80
